# vide

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  todo.txt
doc/: doxygen.in
include/cereal/: access.hpp  access_fwd.hpp  binary_data.hpp  cereal.hpp  concept.hpp  construct.hpp  construct_fwd.hpp  macros.hpp  map_item.hpp  nvp.hpp  size_tag.hpp  size_type.hpp  specialize.hpp  unserializable_type_tag.hpp
include/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  proxy_archive.hpp  xml.hpp
include/cereal/details/: bits.hpp  exception.hpp  helpers.hpp  not_same_as.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
include/cereal/traits/: shared_from_this.hpp  underlying_archive.hpp
include/cereal/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
include/cereal/types/concepts/: pair_associative_container.hpp
include/vide/: access.hpp  access_fwd.hpp  binary_data.hpp  concept.hpp  exception.hpp  macros.hpp  map_item.hpp  nvp.hpp  size_tag.hpp  size_type.hpp  specialize.hpp  unserializable_type_tag.hpp  version.hpp  vide.hpp
include/vide/archives/: binary.hpp  json.hpp  portable_binary.hpp  proxy_archive.hpp  xml.hpp
include/vide/details/: bits.hpp  exception.hpp  helpers.hpp  not_same_as.hpp  polymorphic_impl.hpp  polymorphic_impl_fwd.hpp  static_object.hpp  traits.hpp  util.hpp
include/vide/traits/: shared_from_this.hpp  underlying_archive.hpp
include/vide/types/: array.hpp  atomic.hpp  base_class.hpp  bitset.hpp  chrono.hpp  common.hpp  complex.hpp  deque.hpp  forward_list.hpp  functional.hpp  list.hpp  map.hpp  memory.hpp  optional.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
include/vide/types/concepts/: pair_associative_container.hpp
sandbox/: CMakeLists.txt  performance.cpp  sandbox.cpp  sandbox_as.cpp  sandbox_json.cpp  sandbox_rtti.cpp  sandbox_vs.cpp
sandbox/sandbox_shared_lib/: CMakeLists.txt  base.cpp  base.hpp  derived.cpp  derived.hpp
scripts/: add_rapidjson_prefix.sh  appveyor.bat  renameincludes.sh  updatecoverage.sh
unittests/: CMakeLists.txt  array.cpp  array.hpp  atomic.cpp  atomic.hpp  basic_string.cpp  basic_string.hpp  bitset.cpp  bitset.hpp  bool.cpp  bool.hpp  chrono.cpp  chrono.hpp  cmake-config-module.cmake  common.hpp  complex.cpp  complex.hpp  defer.cpp  defer.hpp  deque.cpp  deque.hpp  forward_list.cpp  forward_list.hpp  list.cpp  list.hpp  map.cpp  map.hpp  memory.cpp  memory.hpp  memory_cycles.cpp  memory_cycles.hpp  multimap.cpp  multimap.hpp  multiset.cpp  multiset.hpp  pair.cpp  pair.hpp  pod.cpp  pod.hpp  polymorphic.cpp  (+40 more)
unittests/cpp17/: CMakeLists.txt  optional.cpp  optional.hpp  variant.cpp  variant.hpp
